[metadata]
name = dypend
version = 0.0.1
author = louisyoungx
author_email = 1462648167@qq.com
description = Load dependent libraries dynamically.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/louisyoungx/stora
project_urls =
    Bug Tracker = https://github.com/louisyoungx/stora/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
